MediaRecorder: use VideoTrackRecorder::GetPreferredCodecId() when available

This CL adds a static method to VTR to query which
one, if any, is the preferred video codec.

A new singleton Lazy Leaky class CodecEnumerator is
added to encapsulate poking the VEA to see which
codecs are supported, and to further query
a) the preferred codec id
b) if a given codec is supported
and wraps the previous CodecIdToVEAProfile()
functionality.

BUG=679946

Review-Url: https://codereview.chromium.org/2624053002
Cr-Commit-Position: refs/heads/master@{#443165}

Former-commit-id: 904b7a6f6dffa9cee5ac930c37dd591c330d14c6